# bentlyk

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  fly.toml  pyproject.toml  render.yaml  requirements.txt  vercel.json
.github/workflows/: heartbeat.yml
api/: _app.py  cron.py  dashboard.py  index.py  live.py  requirements.txt  setup.py  telegram.py  terminal.py  tick.py  trading.py
config/: identity.default.json
docs/: architecture.md  deploy-aws.md  deploy-body.md  deploy.md  how-it-works.md  phase2-3.md  postgres_schema.sql
docs/schemas/: action.schema.json  dynamic_state.schema.json  event.schema.json  goal_candidate.schema.json  identity_core.schema.json  memory_item.schema.json  reflection.schema.json
scripts/: aws-bootstrap.sh  install_windows.ps1
src/bentlyk/: __init__.py  agent.py  attention.py  axioms.py  cli.py  colony.py  config.py  constitution.py  council.py  embodiment.py  events.py  fpf.py  github.py  goals.py  homeostasis.py  learning.py  llm.py  marketdata.py  persistence.py  pg.py  planner.py  plugins.py  polymarket.py  population.py  reasoning.py  reflection.py  self_model.py  serverless.py  skills.py  supabase_rest.py  web.py
src/bentlyk/actions/: __init__.py  base.py  permissions.py  tools.py
src/bentlyk/interfaces/: __init__.py  telegram.py
tests/: test_agent.py  test_attention.py  test_embeddings.py  test_fpf.py  test_goals.py  test_homeostasis.py  test_llm.py  test_loop_and_organs.py  test_memory.py  test_permissions.py  test_personality.py  test_phase1.py  test_planner.py  test_time.py
(+8 files in other folders)
